--- a/publications.html
+++ b/publications.html
@@ -103,6 +103,10 @@
                     <h5 class="card-title">Awards</h5>
                     <ul class="fa-ul mb-0 small">
                         <li>
+                            <i class="fa-li fa fa-trophy text-warning"></i> Best Reviewer Award - Elsevier Journal of
+                            Systems and Software, 2021
+                        </li>
+                        <li>
                             <i class="fa-li fa fa-trophy text-warning"></i> Distinguished Reviewer - ACM Transactions on
                             Software Engineering and Methodologies, 2020
                         </li>
