--- a/services.html
+++ b/services.html
@@ -135,6 +135,9 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
+                            IEEE/ACM International Conference on Software Engineering (ICSE):<br />
+                            &emsp;2023 (Software Engineering in Practice Track)<br />
+                            &emsp;2022 (Student Research Competition)<br />
                             IEEE International Conference on Software Maintenance and Evolution (ICSME):<br />
                             &emsp;2022 (Tool Demo Track)<br />
                             &emsp;2021 (Tool Demo Track)<br />
@@ -154,8 +157,6 @@
                             &emsp;2021 (Technical Papers Track)<br />
                             &emsp;2019 (Student Research Competition)<br />
                             &emsp;2018 (Student Research Competition)<br />
-                            IEEE/ACM International Conference on Software Engineering (ICSE):<br />
-                            &emsp;2022 (Student Research Competition)<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering
                             (SANER):<br />
                             &emsp;2022 (Research Track)<br />
