--- a/index.html
+++ b/index.html
@@ -29,19 +29,13 @@
     <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-57094101-2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJKMG8SDFH"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-57094101-2');
-
-        gtag('set', { 'user_id': 'USER_ID' });
-
+    gtag('config', 'G-DJKMG8SDFH');
     </script>
 
 </head>
