--- a/teaching.html
+++ b/teaching.html
@@ -21,12 +21,11 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="favicon.ico">
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon" >
 
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
     <link href="css/academicons.css" rel="stylesheet" />
-    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJKMG8SDFH"></script>
