--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-    <link href="img/favicon.ico" rel="icon" type="image/x-icon" >
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
@@ -30,11 +30,11 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJKMG8SDFH"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'G-DJKMG8SDFH');
+        gtag('config', 'G-DJKMG8SDFH');
     </script>
 
 </head>
@@ -89,68 +89,61 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <h3 class="mb-2">About Me</h3>
-                        I am an assistant professor at the Department of Computer Science
-                        of the <a href="https://www.unisa.it/">University of Salerno</a>.<br />
-                        My research is on <b>empirical software engineering</b>, particularly <b>software
-                            maintenance and evolution</b>, <b>software testing</b>, and <b>green software
-                            engineering</b>, where I apply <b>machine
-                            learning</b>, <b>search-based
-                            algorithms</b>, and <b>mining of software repositories</b>.<br />
-                        I am a member at large of the <a
-                            href="https://www.computer.org/volunteering/boards-and-committees/technical-activities">IEEE
-                            Conference Activities Committee</a>. I serve as editor for
-                        Elsevier Journal of Systems and Software and Elsevier Science of Computer Programming,
-                        program committee member for international conferences, and referee for international
-                        journals in software engineering and artificial intelligence, for which I received several
-                        Distinguished/Outstanding Reviewer Awards.<br />
-                        I am an <a
-                            href="https://www.computer.org/csdl/magazine/so/about/13611?title=Initiatives%20Team&periodical=IEEE%20Software">IEEE
-                            Software initiative team member</a> and the social media manager of
-                        Elsevier Science of Computer Programming. I am a member of the <a
-                            href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=tosca">TOSCA technical
-                            committee</a>, and I co-lead the "Emerging Compute Platforms ad-hoc".<br />
+                        <p>
+                            I am an assistant professor at the Department of Computer Science
+                            of the <a href="https://www.unisa.it/">University of Salerno</a>.<br />
+                            My research is on <b>empirical software engineering</b>, particularly <b>software
+                                maintenance and evolution</b>, <b>software testing</b>, and <b>green software
+                                engineering</b>, where I apply <b>machine
+                                learning</b>, <b>search-based
+                                algorithms</b>, and <b>mining of software repositories</b>.<br />
+                            I am a member at large of the <a
+                                href="https://www.computer.org/volunteering/boards-and-committees/technical-activities">IEEE
+                                Conference Activities Committee</a>. I serve as editor for
+                            Elsevier Journal of Systems and Software and Elsevier Science of Computer Programming,
+                            program committee member for international conferences, and referee for international
+                            journals in software engineering and artificial intelligence, for which I received several
+                            Distinguished/Outstanding Reviewer Awards.<br />
+                            I am an <a
+                                href="https://www.computer.org/csdl/magazine/so/about/13611?title=Initiatives%20Team&periodical=IEEE%20Software">IEEE
+                                Software initiative team member</a> and the social media manager of
+                            Elsevier Science of Computer Programming. I am a member of the <a
+                                href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=tosca">TOSCA technical
+                                committee</a>, and I co-lead the "Emerging Compute Platforms ad-hoc".<br />
 
-                        You can find my full Curriculum Vitae <a target="_blank" href="FullCV.pdf">here</a>.</p>
+                            You can find my full Curriculum Vitae <a target="_blank" href="FullCV.pdf">here</a>.</p>
                     </div>
 
                     <div class="col-sm-6">
                         <h3 class="mb-2">Timeline</h3>
-                        <ul>
-                            <li>January 2022 - now</li>
-                            <ul>
-                                <li>Assistant Professor @ University of Salerno - Department of Computer Science</li>
-                            </ul>
-                            </li>
-                            <li>January 2020 - December 2021</li>
-                            <ul>
-                                <li>Assistant Professor @ Tilburg University - Jheronimus Academy of Data Science</a></li>
-                            </ul>
-                            </li>
-                            <li>January 2018 - December 2019</a>
-                                <ul>
-                                    <li>Post-doc Researcher @ Vrije Universiteit Brussel - Software Languages Lab</li>
-                                </ul>
-                            </li>
-                            <li>December 2014 - March 2018
-                                <ul>
-                                    <li>Ph.D. in Management & Information Technology @ University of Salerno</li>
-                                    <li>Advisor: Prof. Andrea De Lucia</li>
-                                </ul>
-                            </li>
-                            <li>October 2011 - September 2014<ul>
-                                    <li>Master's degree in Computer Science @ University of Salerno</li>
-                                    <li>Advisor: Prof. Andrea De Lucia</li>
-                                    <li>Grade: 110/110 cum laude</li>
-                                </ul>
-                            </li>
-                            <li>October 2007 - May 2011</a>
-                                <ul>
-                                    <li>Bachelor degree in Computer Science @ University of Molise</li>
-                                    <li>Advisor: Prof. Giovanni Capobianco</li>
-                                    <li>Grade: 110/110 cum laude</li>
-                                </ul>
-                            </li>
-                        </ul>
+                        <hr />
+                        January 2022 - now<br />
+                        Assistant Professor<br />
+                        University of Salerno - Department of Computer Science
+                        <hr />
+                        January 2020 - December 2021<br />
+                        Assistant Professor<br />
+                        Tilburg University - Jheronimus Academy of Data Science
+                        <hr />
+                        January 2018 - December 2019<br />
+                        Post-doc Researcher<br />
+                        Vrije Universiteit Brussel - Software Languages Lab
+                        <hr />
+                        December 2014 - March 2018<br />
+                        Ph.D. in Management & Information Technology<br />
+                        University of Salerno<br />
+                        Advisor: Prof. Andrea De Lucia
+                        <hr />
+                        October 2011 - September 2014<br />
+                        Master's degree in Computer Science @ University of Salerno<br />
+                        Advisor: Prof. Andrea De Lucia<br />
+                        Grade: 110/110 cum laude
+                        <hr />
+                        October 2007 - May 2011<br />
+                        Bachelor degree in Computer Science @ University of Molise<br />
+                        Advisor: Prof. Giovanni Capobianco<br />
+                        Grade: 110/110 cum laude<br />
+                        <hr />
                     </div>
                 </div>
 
