Minor fixes to index

--- a/index.html
+++ b/index.html
@@ -135,12 +135,14 @@
                         Advisor: Prof. Andrea De Lucia
                         <hr />
                         October 2011 - September 2014<br />
-                        Master's degree in Computer Science @ University of Salerno<br />
+                        Master's degree in Computer Science<br />
+                        University of Salerno<br />
                         Advisor: Prof. Andrea De Lucia<br />
                         Grade: 110/110 cum laude
                         <hr />
                         October 2007 - May 2011<br />
-                        Bachelor degree in Computer Science @ University of Molise<br />
+                        Bachelor degree in Computer Science<br />
+                        University of Molise<br />
                         Advisor: Prof. Giovanni Capobianco<br />
                         Grade: 110/110 cum laude<br />
                         <hr />
