--- a/teaching.html
+++ b/teaching.html
@@ -21,7 +21,7 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-    <link href="img/favicon.ico" rel="icon" type="image/x-icon" >
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
@@ -30,11 +30,11 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJKMG8SDFH"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'G-DJKMG8SDFH');
+        gtag('config', 'G-DJKMG8SDFH');
     </script>
 
 </head>
@@ -100,30 +100,25 @@
                                     <td>Software Dependability</td>
                                     <td>MSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Spring 2022 (co-lectured with <a
-                                        href="https://fpalomba.github.io/" target="blank">F. Palomba</a>)
+                                    <td>Spring 2023 <br />
+                                        Spring 2022 (co-lectured with <a href="https://fpalomba.github.io/"
+                                            target="blank">F. Palomba</a>)
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Object Oriented Programming</td>
+                                    <td>BSc</td>
+                                    <td>University of Salerno</td>
+                                    <td>Autumn 2022 (co-lectured with <a href="https://docenti.unisa.it/005087/en/home"
+                                            target="blank">V. Deufemia</a>)
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Software Engineering, Management, and Evolution</td>
                                     <td>MSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Spring 2022 (co-lectured with <a
-                                        href="https://docenti.unisa.it/003241/en/home" target="blank">A. De
-                                        Lucia</a>)
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Introduction to Machine Learning</td>
-                                    <td>Pre-MSc</td>
-                                    <td>Jheronimus Academy of Data Science (Tilburg University, Technical University
-                                        Eindhoven)</td>
-                                    <td>Spring 2021 (co-lectured with <a
-                                            href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
-                                            target="blank">D.A. Tamburri</a>)
-                                        <br />Spring 2020 (co-lectured with
-                                        <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
-                                            target="blank">D.A. Tamburri</a>)
+                                    <td>Spring 2022 (co-lectured with <a href="https://docenti.unisa.it/003241/en/home"
+                                            target="blank">A. De Lucia</a>)
                                     </td>
                                 </tr>
                                 <tr>
@@ -147,6 +142,17 @@
                                             href="https://scholar.google.it/citations?user=IfiRc9MAAAAJ&hl=en"
                                             target="blank"> I. Kumara</a>,<a href="https://www.linkedin.com/in/ekhtiar/"
                                             target="blank"> E. Syed</a>)
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Introduction to Machine Learning</td>
+                                    <td>Pre-MSc</td>
+                                    <td>Jheronimus Academy of Data Science (Tilburg University, Technical University
+                                        Eindhoven)</td>
+                                    <td>Spring 2021<br />
+                                        Spring 2020 (co-lectured with
+                                        <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
+                                            target="blank">D.A. Tamburri</a>)
                                     </td>
                                 </tr>
                                 <tr>
