--- a/teaching.html
+++ b/teaching.html
@@ -97,10 +97,18 @@
                             </thead>
                             <tbody>
                                 <tr>
+                                    <td>Empirical Research Methods</td>
+                                    <td>PhD</td>
+                                    <td>University of Salerno</td>
+                                    <td>Summer 2023 (co-lectured with <a href="https://fpalomba.github.io/"
+                                            target="blank">F. Palomba</a>)
+                                    </td>
+                                </tr>
+                                <tr>
                                     <td>Software Dependability</td>
                                     <td>MSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Spring 2023 <br />
+                                    <td>Spring 2023<br />
                                         Spring 2022 (co-lectured with <a href="https://fpalomba.github.io/"
                                             target="blank">F. Palomba</a>)
                                     </td>
