I will chair Euromicro SEAA! Add DEFUSE in the tool section. Add some work as reviewer and the invited talk in Termoli. Update CV. Minor fixes.

--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-    <link href="img/favicon.ico" rel="icon" type="image/x-icon" >
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
@@ -133,15 +133,32 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
+                        <h4 class="card-title">Defuse</h4>
+                        <p class="card-text text-justify small">Defuse automatically collects and classifies failure
+                            data, enables the correction of those classifications, and builds machine learning models to
+                            detect defects based on those data. We instantiated the tool in the scope of
+                            Infrastructure-as-Code, the DevOps practice enabling management and provisioning of
+                            infrastructure through the definition of machine-readable files. It is released under the
+                            Apache 2.0 license.</p>
+                        <p class="card-text"><a href="https://github.com/radon-h2020/radon-defuse/"
+                                target="_blank">Source Code</a> - <a href="https://www.youtube.com/watch?v=37mmLdCX3jU/"
+                                target="_blank">Video</a>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card card-horizontal mb-2">
+                    <div class="card-body">
                         <h4 class="card-title">RepoMiner</h4>
-                        <p class="card-text text-justify small">RepoMiner} is a language-agnostic tool developed to
+                        <p class="card-text text-justify small">RepoMiner is a language-agnostic tool developed to
                             support software engineering researchers in creating datasets to support any study on defect
                             prediction.RepoMiner automatically collects failure data from software components, labels
                             them as failure-prone or neutral, and calculates metrics to be used as ground truth for
                             defect prediction models. It is released under the Apache 2.0 license.</p>
                         <p class="card-text"><a href="https://github.com/radon-h2020/radon-repository-miner"
                                 target="_blank">Source Code</a> - <a
-                                href="https://radon-h2020.github.io/radon-repository-miner/" target="_blank">Documentation</a>
+                                href="https://radon-h2020.github.io/radon-repository-miner/"
+                                target="_blank">Documentation</a>
                         </p>
                     </div>
                 </div>
@@ -156,7 +173,8 @@
                             infrastructure code. It is released under the Apache 2.0 license.</p>
                         <p class="card-text"><a href="https://github.com/radon-h2020/radon-ansible-metrics"
                                 target="_blank">Source Code</a> - <a
-                                href="https://radon-h2020.github.io/radon-ansible-metrics" target="_blank">Documentation</a>
+                                href="https://radon-h2020.github.io/radon-ansible-metrics"
+                                target="_blank">Documentation</a>
                         </p>
                     </div>
                 </div>
