--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-    <link href="img/favicon.ico" rel="icon" type="image/x-icon" >
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
@@ -77,6 +77,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Organizing Committee Member of SE events</h4>
                         <p class="card-text text-justify small">
+                            49th Euromicro Conference on Software Engineering and Advanced Applications: Program
+                            Chair<br />
                             <a href="https://benevol2021.github.io/" target="blank">20th Belgium-Netherlands
                                 Software Evolution Workshop</a>: Organizer<br />
                             <a href="https://conf.researchr.org/home/icpc-2021" target="blank">29th International
@@ -106,7 +108,8 @@
                         <p class="card-text text-justify small">
                             Elsevier Science of Computer Programming: 2021 - Actual<br />
                             Elsevier Journal of Systems and Software: 2021 - Actual<br />
-                            Guest Editor for Elsevier Science of Computer Programming for the special issue on "Software Health of Software Ecosystems": 2020 -
+                            Guest Editor for Elsevier Science of Computer Programming for the special issue on "Software
+                            Health of Software Ecosystems": 2020 -
                             2021<br />
                             IEEE Software - Initiatives Team: 2020 - Actual<br />
                             IEEE Software Blog: 2019 - Actual
@@ -142,7 +145,8 @@
                             IEEE International Conference on Program Comprehension (ICPC):<br />
                             &emsp;2022 (Research Track)<br />
                             &emsp;2020 (Research Track)<br />
-                            IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft):<br />
+                            IEEE/ACM International Conference on Mobile Software Engineering and Systems
+                            (MOBILESoft):<br />
                             &emsp;2022 (Technical Papers Track)<br />
                             &emsp;2021 (Technical Papers Track)<br />
                             &emsp;2019 (Student Research Competition)<br />
@@ -190,9 +194,12 @@
                         <p class="card-text text-justify small">
                             Innovations in Software Engineering Conference (ISEC): 2022<br />
                             IEEE International Conference on Program Comprehension (ICPC): 2021, 2019, 2018, 2016<br />
-                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2020 (Research Track), 2018 (Research Track), 2016 (Early Research Achievement Track)<br />
-                            International Conference on Evaluation and Assessment in Software Engineering (EASE): 2020<br />
-                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER): 2018, 2017<br />
+                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2020 (Research
+                            Track), 2018 (Research Track), 2016 (Early Research Achievement Track)<br />
+                            International Conference on Evaluation and Assessment in Software Engineering (EASE):
+                            2020<br />
+                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER):
+                            2018, 2017<br />
                             International Conference on Business Information Systems (BIS): 2017, 2016, 2015<br />
                             International Conference on Distributed Multimedia Systems (DMS): 2016, 2015<br />
                             International Conference on Enterprise Information Systems (ICEIS): 2017, 2016, 2015
@@ -204,18 +211,28 @@
                     <div class="card-body">
                         <h4 class="card-title">Invited Talks</h4>
                         <p class="card-text text-justify small">
-                            Code Smell Detection: the Ecstasy of Machine Learning. Utrecht University, Utrecht, October 6th, 2021<br />
-                            Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. University of Milano Bicocca, Virtual, July 7th, 2021<br />
+                            Machine Learning for Software Engineering: the New Gold Rush. Smart Services and Data-driven
+                            Societies Summit, University of Molise, Termoli, July 25th, 2022<br />
+                            Code Smell Detection: the Ecstasy of Machine Learning. Utrecht University, Utrecht, October
+                            6th, 2021<br />
+                            Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. University of
+                            Milano Bicocca, Virtual, July 7th, 2021<br />
                             Improving Energy Efficiency of Mobile Applications in the Internet of Things. International
                             Summer School on Internet of Things, University of Salerno, Virtual, April 9th, 2021<br />
-                            Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. Technical University Eindhoven, Virtual, December 10th, 2020<br />
+                            Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. Technical
+                            University Eindhoven, Virtual, December 10th, 2020<br />
                             Improving Energy Efficiency of Mobile Applications in the Internet of Things. International
                             Summer School on Internet of Things, University of Salerno, Virtual, June 3rd, 2020<br />
-                            Defect Prediction: using Machine Learning for focusing the Testing Effort. University of Salerno, Virtual, March 25th, 2020<br />
-                            Mining Source Code^3: Mining Idioms, Usages and Edits. FOSDEM, Brussels, Belgium, February 3rd, 2019<br />
-                            Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus Academy of Data Science, 's-Hertogenbosch, The Netherlands, March 9th, 2018<br />
-                            Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus Academy of Data Science, 's-Hertogenbosch, The Netherlands, December 5th, 2017<br />
-                            Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, Brussels, Belgium, March 23rd, 2017
+                            Defect Prediction: using Machine Learning for focusing the Testing Effort. University of
+                            Salerno, Virtual, March 25th, 2020<br />
+                            Mining Source Code^3: Mining Idioms, Usages and Edits. FOSDEM, Brussels, Belgium, February
+                            3rd, 2019<br />
+                            Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus
+                            Academy of Data Science, 's-Hertogenbosch, The Netherlands, March 9th, 2018<br />
+                            Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus
+                            Academy of Data Science, 's-Hertogenbosch, The Netherlands, December 5th, 2017<br />
+                            Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, Brussels,
+                            Belgium, March 23rd, 2017
                         </p>
                     </div>
                 </div>
