--- a/teaching.html
+++ b/teaching.html
@@ -107,7 +107,7 @@
                                     <td>Object Oriented Programming</td>
                                     <td>BSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Autumn 2022 (co-lectured with <a href="https://docenti.unisa.it/005087/en/home"
+                                    <td>Fall 2022 (co-lectured with <a href="https://docenti.unisa.it/005087/en/home"
                                             target="blank">V. Deufemia</a>)
                                     </td>
                                 </tr>
