--- a/services.html
+++ b/services.html
@@ -160,10 +160,10 @@
                             Euromicro Conference on Software Engineering and Advanced Applications (SEAA):<br />
                             &emsp;2020 (Journal First Track)<br />
                             International Workshop on Machine Learning Techniques for Software Quality Evaluation
-                            (MaLTeSQuE): 2022 2021 2020 2019 2018<br />
+                            (MaLTeSQuE): 2022, 2021, 2020, 2019, 2018<br />
                             International Workshop on Quantum Programming for Software Engineering (QP4SE): 2022<br />
                             International Workshop on Software Health (SoHeal): 2021<br />
-                            International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2019
+                            International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2019,
                             2018<br />
                         </p>
                     </div>
