--- a/services.html
+++ b/services.html
@@ -122,7 +122,7 @@
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
                             IEEE/ACM International Conference on Software Engineering (ICSE):<br />
-                            &emsp;2023 (Software Engineering in Practice Track)<br />
+                            &emsp;2023 (Software Engineering in Practice Track, Artefact Evaluation Track, Poster Track)<br />
                             &emsp;2022 (Student Research Competition)<br />
                             IEEE International Conference on Program Comprehension (ICPC):<br />
                             &emsp;2023 (Research Track)<br />
