Add and resharp services

--- a/services.html
+++ b/services.html
@@ -108,11 +108,10 @@
                         <p class="card-text text-justify small">
                             Elsevier Science of Computer Programming: 2021 - Actual<br />
                             Elsevier Journal of Systems and Software: 2021 - Actual<br />
-                            Guest Editor for Elsevier Science of Computer Programming for the special issue on "Software
-                            Health of Software Ecosystems": 2020 -
-                            2021<br />
                             IEEE Software - Initiatives Team: 2020 - Actual<br />
-                            IEEE Software Blog: 2019 - Actual
+                            IEEE Software Blog: 2019 - Actual<br />
+                            Guest Editor for Elsevier Science of Computer Programming for the special issue on "Software Health of Software Ecosystems": 2020 -
+                            2021<br />
                         </p>
                     </div>
                 </div>
@@ -122,38 +121,30 @@
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
                             IEEE/ACM International Conference on Software Engineering (ICSE):<br />
-                            &emsp;2023 (Software Engineering in Practice Track, Artefact Evaluation Track, Poster Track)<br />
+                            &emsp;2023 (Software Engineering in Practice Track)<br />
+                            &emsp;2023 (Artefact Evaluation Track)<br />
+                            &emsp;2023 (Poster Track)<br />
                             &emsp;2022 (Student Research Competition)<br />
+                            IEEE/ACM International Conference on Mining Software Repositories (MSR):<br />
+                            &emsp;2023, 2022 (Technical Papers Track)<br />
                             IEEE International Conference on Program Comprehension (ICPC):<br />
-                            &emsp;2023 (Research Track)<br />
-                            &emsp;2022 (Research Track)<br />
-                            &emsp;2020 (Research Track)<br />
+                            &emsp;2023, 2022, 2020 (Research Track)<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering
                             (SANER):<br />
-                            &emsp;2023 (Research Track)<br />
-                            &emsp;2022 (Research Track)<br />
-                            &emsp;2021 (Research Track, Reproducibility Studies and Negative Results Track, Tool Demo
-                            Track)<br />
-                            &emsp;2020 (Research Track, Journal First Track, Tool Demo Track)<br />
+                            &emsp;2023, 2022, 2021, 2020 (Research Track)<br />
+                            &emsp;2021 (Reproducibility Studies and Negative Results Track)<br />
+                            &emsp;2021, 2020 (Tool Demo Track)<br />
+                            &emsp;2020 (Journal First Track)<br />
                             IEEE International Conference on Software Maintenance and Evolution (ICSME):<br />
-                            &emsp;2022 (Tool Demo Track)<br />
-                            &emsp;2021 (Tool Demo Track)<br />
-                            &emsp;2019 (Tool Demo Track)<br />
-                            &emsp;2018 (Tool Demo Track)<br />
+                            &emsp;2022, 2021, 2019, 2018 (Tool Demo Track)<br />
                             IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM):<br />
-                            &emsp;2022 (Research Track)<br />
-                            &emsp;2021 (Research Track)<br />
+                            &emsp;2022, 2021 (Research Track)<br />
                             &emsp;2020 (New Ideas and Emerging Results Track)<br />
-                            IEEE/ACM International Conference on Mining Software Repositories (MSR):<br />
-                            &emsp;2022 (Technical Papers Track)<br />
                             IEEE/ACM International Conference on Mobile Software Engineering and Systems
                             (MOBILESoft):<br />
-                            &emsp;2022 (Technical Papers Track)<br />
-                            &emsp;2021 (Technical Papers Track)<br />
-                            &emsp;2019 (Student Research Competition)<br />
-                            &emsp;2018 (Student Research Competition)<br />
-                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of
-                            Software Engineering (ESEC/FSE):<br />
+                            &emsp;2022, 2021 (Technical Papers Track)<br />
+                            &emsp;2019, 2018 (Student Research Competition)<br />
+                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE):<br />
                             &emsp;2020 (Tool Demo Track)<br />
                             &emsp;2019 (Artifact Evaluation Track)<br />
                             IEEE/ACM International Conference on Automated Software Engineering (ASE):<br />
@@ -172,17 +163,14 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
-                        <h4 class="card-title">Reviewer for International Journals</h4>
+                        <h4 class="card-title">Frequent Reviewer for the following International Journals</h4>
                         <p class="card-text text-justify small">
                             Empirical Software Engineering - Springer<br />
-                            IEEE Access - IEEE<br />
                             IEEE Software - IEEE<br />
-                            IET Software - Institution of Engineering and Technology<br />
                             Information and Software Technology - Elsevier<br />
                             Journal of Software: Evolution and Process - Wiley<br />
                             Journal of Systems and Software - Elsevier<br />
                             Science of Computer Programming - Elsevier<br />
-                            Software Quality Journal - Springer<br />
                             Transactions on Software Engineering - IEEE<br />
                             Transactions on Software Engineering and Methodology - ACM
                         </p>
