Minor fix to teaching.

--- a/teaching.html
+++ b/teaching.html
@@ -120,7 +120,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Data Engineerng</td>
+                                    <td>Data Engineering</td>
                                     <td>MSc</td>
                                     <td>Jheronimus Academy of Data Science (Tilburg University, Technical University
                                         Eindhoven)</td>
