--- a/services.html
+++ b/services.html
@@ -77,7 +77,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Organizing Committee Member of SE events</h4>
                         <p class="card-text text-justify small">
-                            <a href="https://dsd-seaa2023.com/seaa/" target="blank"></a>49th Euromicro Conference on Software Engineering and Advanced Applications</a>: Program
+                            <a href="https://dsd-seaa2023.com/seaa/" target="blank">49th Euromicro Conference on Software Engineering and Advanced Applications</a>: Program
                             Chair<br />
                             <a href="https://benevol2021.github.io/" target="blank">20th Belgium-Netherlands
                                 Software Evolution Workshop</a>: Organizer<br />
